1.Built the submit page 2.Modified navbar 3.Added two html files

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="explore.html"> Explore Top Parks </a>
+                        <a class="nav-link" href="review.html"> Review a Park </a>
                         <a class="nav-link" href="submit.html"> Submit Your Own Park </a>
                         <a class="nav-link" href="handy.html"> Handy Resources </a>
                         <a class="nav-link" href="map.html"> Interactive Map</a>
@@ -43,7 +44,7 @@
             <div class="container d-flex align-items-center justify-content-center fs-2 flex-column">
                 <h1 style="font-size: 2em">Our Goal</h1>
                 <p style="font-size: 24px">This is a paragraph explaining our website's goal. The light blinded him. It was dark and he thought he was the only one in the area, but the light shining in his eyes proved him wrong. It came from about 100 feet away and was shining so directly into his eyes he couldn't make out anything about the person holding the light.</p>
-                <a href="#" class="btn btn-brand ms-lg-3" style="font-size: x-large">Start Exploring</a>
+                <a href="explore.html" class="btn btn-brand ms-lg-3" style="font-size: x-large">Start Exploring</a>
             </div>
         </section>
 
