--- a/map.html
+++ b/map.html
@@ -29,6 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="explore.html"> Explore Top Parks </a>
+                        <a class="nav-link" href="review.html"> Review a Park </a>
                         <a class="nav-link" href="submit.html"> Submit Your Own Park </a>
                         <a class="nav-link" href="handy.html"> Handy Resources </a>
                         <a class="nav-link" href="map.html"> Interactive Map</a>
