--- a/websiteFiles/parkPage.html
+++ b/websiteFiles/parkPage.html
@@ -13,7 +13,6 @@
 
         <!-- Include CSS -->
         <link href="css_files/style.css" rel="stylesheet"/>
-
         <title>Explore Ohio</title>
     </head>
 
@@ -21,10 +20,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid px-4">
-                <a class="navbar-brand" href="index.html" style="font-size: 1.5em">
-                    <img src="images/tree-icon.svg" alt="logo" width="30" height="30">
-                    Explore Ohio
-                </a>
+                <a class="navbar-brand" href="index.html" style="font-size: 1.5em">Explore Ohio</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,14 +39,6 @@
         </nav>
 
 
-        <!-- Our Goal Section -->
-        <section class="our-goal-section">
-            <div class="container d-flex align-items-center justify-content-center fs-2 flex-column">
-                <h1 style="font-size: 2em">Our Goal</h1>
-                <p style="font-size: 24px">This is a paragraph explaining our website's goal. The light blinded him. It was dark and he thought he was the only one in the area, but the light shining in his eyes proved him wrong. It came from about 100 feet away and was shining so directly into his eyes he couldn't make out anything about the person holding the light.</p>
-                <a href="explore.html" class="btn btn-brand ms-lg-3" style="font-size: x-large">Start Exploring</a>
-            </div>
-        </section>
 
         <!-- Background -->
         <img class="bg-img" src="images/wallpaper.jpg" class="img-fluid" alt="Responsive image">
