added ability to add reviews (removing picture uploads and only allowing for park submissions for simplicity)

--- a/websiteFiles/submit.html
+++ b/websiteFiles/submit.html
@@ -76,7 +76,7 @@
                         </div>
 
                         <!-- Tag Selections -->
-                        <h3>Select Tags (up to 6)</h3>
+                        <h3>Select Tags</h3><h6>(up to six)</h6>
                         <input type="hidden" id="hiddenTags" name="tags">
                         <div class="mb-4">
                             <!-- Dropdown Menu -->
