fixed some formatting

--- a/websiteFiles/review.html
+++ b/websiteFiles/review.html
@@ -147,12 +147,11 @@
                         <h3>Details on Your Experience</h3>
                         <textarea class="form-control mb-4" rows="4" type="text" placeholder="Describe your experience" style="background-color: #FEFAE0;"></textarea>
                         
-                        <!-- Upload & Submit Buttons -->
-                        <div class="d-flex gap-4">
-                            <label for="uploadFile" style="font-size: large; font-weight: 550" class="btn btn-success">Upload Photos</label>
-                            <input type="file" id="uploadFile" class="d-none" multiple accept="image/*">
-
-                            <button type="submit" style="font-size: large; font-weight: 550" class="btn btn-success">Submit Review</button>
+                        <!-- Submit Button -->
+                        <div class="col-md-6" style="padding-top: 3%">
+                            <div class="d-flex gap-4">
+                                <button type="submit" class="btn btn-success" style="font-size: x-large; font-weight: bold;">Submit Review</button>
+                            </div>
                         </div>
                     </form>
                 </div>
