--- a/websiteFiles/submit.html
+++ b/websiteFiles/submit.html
@@ -88,7 +88,9 @@
                         <input type="hidden" id="hiddenTags" name="tags">
                         <div class="mb-4">
                             <!-- Dropdown Menu -->
-                            <select id="tagDropdown" class="form-select" style="background-color: #FEFAE0;"> </select>
+                            <select id="tagDropdown" class="form-select" style="background-color: #FEFAE0;">
+                                <option value="">Select Tags...</option>
+                            </select>
                             <!-- Container to Hold Tags -->
                             <div id="selectedTags" class="mt-3 d-flex flex-wrap gap-2"></div>
 
@@ -157,11 +159,11 @@
 
                         
                         <!-- Upload & Submit Buttons -->
-                        <div class="d-flex gap-4">
-                            <label for="uploadFile" style="font-size: large; font-weight: 550" class="btn btn-success">Upload Photos</label>
-                            <input type="file" id="uploadFile" class="d-none" multiple accept="image/*">
-
-                            <button type="submit" style="font-size: large; font-weight: 550" class="btn btn-success">Submit Park</button>
+                        <div class="d-flex gap-4" style="padding-top: 3%">
+                            <label for="uploadFile" class="btn btn-success" style="font-size: x-large; font-weight: bold;">Upload Photos</label>
+                            <input type="file" name="uploadFile" id="uploadFile" class="d-none" multiple accept="image/*">
+    
+                            <button type="submit" class="btn btn-success" style="font-size: x-large; font-weight: bold;">Submit Park</button>
                         </div>
 
                     </form>
