formatted most of explore page

--- a/websiteFiles/review.html
+++ b/websiteFiles/review.html
@@ -169,6 +169,14 @@
         </script>
         
         <!-- Background -->
-        <img class="bg-img" src="images/wallpaper.jpg" class="img-fluid" alt="Responsive image">
+        <style>
+            body {
+                background-image: url('images/wallpaper.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed; 
+            }
+        </style>
     </body>
 </html>
