--- a/websiteFiles/index.html
+++ b/websiteFiles/index.html
@@ -46,7 +46,9 @@
         <section class="our-goal-section">
             <div class="container d-flex align-items-center justify-content-center fs-2 flex-column">
                 <h1 style="font-size: 2em; font-weight: 550;">Our Goal</h1>
-                <p style="font-size: 24px">This is a paragraph explaining our website's goal. The light blinded him. It was dark and he thought he was the only one in the area, but the light shining in his eyes proved him wrong. It came from about 100 feet away and was shining so directly into his eyes he couldn't make out anything about the person holding the light.</p>
+                <p style="font-size: 24px">Welcome to Explore Ohio! Our website aims to provide a hub for people who want to explore nature across
+                    the Buckeye State. We focus on providing information about different parks and hikes within the state along with useful resources.
+                    Come explore parks near you, submit new parks, or leave a review about your latest adventure.</p>
                 <a href="explore.html" class="btn btn-brand ms-lg-3" style="font-size: x-large; font-weight: 550;">Start Exploring!</a>
             </div>
         </section>
