--- a/websiteFiles/map.html
+++ b/websiteFiles/map.html
@@ -7,6 +7,9 @@
         <!-- Responsive meta tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- Select tags -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
         <!-- Include via CDN -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
@@ -18,7 +21,6 @@
 
         <title>Explore Ohio</title>
         
-
         <!-- Interactable Map -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
@@ -30,9 +32,11 @@
             }
             .mapMenu {
                 background-color: rgba(242, 246, 206, 0.8);
-                height: 100vh;      /* Modified */
-                padding-top: 3rem;  /* Modified */
-                width: 25vw;
+                height: 100vh;      
+                padding-left: 1vw; 
+                padding-right: 1vw;  
+                padding-top: 4vh; 
+                width: 30vw;
                 position: absolute;
                 top: 0px;
                 left: 0px;
@@ -75,7 +79,7 @@
         <div id="map"></div>
 
         <div class="mapMenu" id="mapMenu">
-            <button type="button" class="btn-close btn-sm ms-2 remove-tag" aria-label="Close" onclick="closeMenu()"></button>
+            <!-- <button type="button" class="btn-close btn-sm ms-2 remove-tag" aria-label="Close" onclick="closeMenu()"></button> -->
             <div class="p-3" id="menuContent"> </div>
         </div>
 
@@ -112,7 +116,7 @@
                 iconSize: [38, 95]
             });
             var bothIcon = L.icon({ // icon for both
-                iconUrl: 'images/both1.svg',
+                iconUrl: 'images/both.svg',
                 iconSize: [38, 95]
             });
 
@@ -138,10 +142,10 @@
                             i = 5;
                             while (i > 0) {
                                 if (stars >= i) {
-                                    html = '<img src="images/starFilled.svg" style="height: 30px"> ' + html;
+                                    html = '<img src="images/starFilled.svg" style="height: 40px"> ' + html;
                                 }
                                 else {
-                                    html = '<img src="images/starEmpty.svg" style="height: 30px"> ' + html;
+                                    html = '<img src="images/starEmpty.svg" style="height: 40px"> ' + html;
                                 }
                                 i = i - 1;
                             }
@@ -154,20 +158,29 @@
                             var tags = park.tags.map(tag => `<span class="tags">${tag}</span>`).join('');
 
                             var content = `
-                                <img src="data/photos/${park.id}-a.jpg" class="img-fluid mb-2">
+                                <div class = "d-flex flex-column align-items-center">
+                                    <img src="data/photos/${park.id}-a.jpg" class="img-fluid mb-1 mt-4 rounded" style="border: 5px solid #626F47; height: 30vh;">
+                                </div>
 
-                                <div class="d-flex flex-column align-items-center mb-3 text-center">
-                                    <h3 class="park-name" style="color: #626F47">${park.name}</h3>
+                                <div class = "d-flex flex-column align-items-center text-center">
+                                    <div class="d-flex flex-row align-items-center mb-1 text-center">
+                                        <img src="images/${park.type}.svg" style="height: 40px; width: 40px; margin-right: 10px;">
+                                        <h3 class="park-name" style="color: #626F47">${park.name}</h3>
+                                    </div>
+                                    <i class="bi bi-geo-alt-fill mb-3" style="color: #626F47; font-size: large;">
+                                        ${park.location.latitude}, ${park.location.longitude}
+                                    </i> 
+
                                     <div class="show-stars">
                                         ${showStars(park.rating.value)}
                                     </div>
-                                </div>
 
-                                <div class="tags-grid">
-                                    ${tags}
-                                </div>
-                                <div class="mt-3 text-center">
-                                    <a href="parkPage.html?id=${park.id}" class="btn btn-brand ms-lg-3" style="font-size: x-large; font-weight: 500;">View More</a>
+                                    <div class="mt-3 d-flex flex-wrap gap-2 mb-4 align-items-center justify-content-center">
+                                        ${tags}
+                                    </div>
+                                    <div class="mt-3 text-center">
+                                        <a href="parkPage.html?id=${park.id}" class="btn btn-success" style="font-size: x-large; font-weight: bold;">View More</a>
+                                    </div>
                                 </div>
                             `;
 
@@ -178,9 +191,9 @@
                     });
                 });
 
-                function closeMenu() {
-                    document.getElementById('mapMenu').style.display = 'none'; // close menu
-                }
+                //function closeMenu() {
+                //   document.getElementById('mapMenu').style.display = 'none'; // close menu
+                //}
         </script>
 
 
