--- a/websiteFiles/submit.html
+++ b/websiteFiles/submit.html
@@ -69,7 +69,7 @@
                         <input name="parkName" class="form-control mb-4" type="text" placeholder="Park Name" id="parkName" style="background-color: #FEFAE0">
 
                         <h3>Latitude, Longitude</h3>
-                        <input name="latLong" class="form-control mb-5" type="text" placeholder="Latitude, Longitude" id="latLong" style="background-color: #FEFAE0">
+                        <input name="latLong" class="form-control mb-5" type="text" placeholder="Latitude, Longitude" id="latLong" style="background-color: #FEFAE0" pattern="^\s*-?\d{1,3}\.\d+,\s*-?\d{1,3}\.\d+\s*$" title="(ex: 1.234, 56.789)">
                 
                         
                         <!-- Checkbox Toggle Buttons -->
