Fixed the broken visual elements

--- a/websiteFiles/review.html
+++ b/websiteFiles/review.html
@@ -84,11 +84,19 @@
         <!-- Panels -->
         <div class="container-fluid push-down">
             <div class="row min-vh-100">
-            
-                <!-- Left panel -->
+
+                <!-- Left panel 
                 <div class="col-md-6 p-0"
                 style="background-color: rgba(24, 20, 0, 0.5);">
                     <div class="h-100 d-flex flex-column justify-content-center align-items-center text-center">
+                        <h1 class="p-4">Review a Park</h1>
+                    </div>
+                </div>-->
+
+                <!-- Left panel -->
+                <div class="col-md-6 p-0">
+                    <div class="h-100 d-flex flex-column justify-content-center align-items-center text-center"
+                    style="background-color: rgba(24, 20, 0, 0.5);">
                         <h1 class="p-4">Review a Park</h1>
                     </div>
                 </div>
@@ -166,14 +174,7 @@
         </script>
         
         <!-- Background -->
-        <style>
-            body {
-                background-image: url('images/wallpaper.jpg');
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-attachment: fixed; 
-            }
-        </style>
+        <img class="bg-img" src="images/wallpaper.jpg" class="img-fluid" alt="Responsive image">
+
     </body>
 </html>
