--- a/websiteFiles/parkPage.html
+++ b/websiteFiles/parkPage.html
@@ -148,7 +148,7 @@
                                 }).join('');
                                 images.innerHTML = `
                                     <div class = "d-flex flex-column align-items-center text-center">
-                                        <h1 style="margin-bottom: 20px;"> Gallary </h1>
+                                        <h1 style="margin-bottom: 20px;"> Gallery </h1>
                                         ${photoList}
                                     </div>
                                 `
